refactor: split the templates files into base.html and index.html

--- a/docListing/listings/templates/listings/index.html
+++ b/docListing/listings/templates/listings/index.html
@@ -1,19 +1,8 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'node_modules/bootstrap/dist/css/bootstrap.css' %}">
-    <title>Load data</title>
-</head>
-<body>
-    <div class="container">
-        <div class="alert alert-success">
-            <p>{{ message }}</p>
-        </div>
-        <h1>here you can load your JSON file</h1>
-    </div>
-</body>
-</html>
+{% extends 'listings/base.html' %}
+
+{% block content %}
+<div class="alert alert-success">
+    <p>{{ message }}</p>
+</div>
+<h1>here you can load your JSON file</h1>
+{% endblock %}
