--- a/docListing/listings/templates/listings/base.html
+++ b/docListing/listings/templates/listings/base.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="{% static 'node_modules/bootstrap/dist/css/bootstrap.css' %}">
     <title>{{ title }}</title>
 </head>
-<body>
+<body style="background: #f2f2f2;">
     <div class="container" id="content" name="content">
         {% block content %}
         {% endblock %}
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
