refactor: made some indentations in the code

--- a/docListing/listings/templates/listings/display.html
+++ b/docListing/listings/templates/listings/display.html
@@ -50,5 +50,5 @@
             </div>
         {% endfor %}
     </div>
-    <a href="/" class="btn btn-outline-success">Charger un autre fichier</a>
+    <a href="/" class="btn btn-outline-success mb-4">Charger un autre fichier</a>
 {% endblock %}
