feat: changing the <h2> tag text on index view

--- a/docListing/listings/templates/listings/index.html
+++ b/docListing/listings/templates/listings/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1>Charger votre ficher JSON ici</h1>
+<h2>Chargement du fichier JSON</h2>
 <form enctype="multipart/form-data" action="displayDocs/" method="post">
     <div class="form-group mt-4 mr-4">
         {% csrf_token %}
